Major bug fixes to the ffs-filter - Added filtering by tier in ffs-filter (how could I forgot this...) - Added filtering by tags in ffs-filter - Fixed filtering by nationality, hull type (Main/Vanguard) & rarity of Ultra - Lumped a ships by in-game filters (eg. Battle Monitor with BB, Large Cruisers with Heavy Cruisers) - Fixed ffs-filter's close button - Fixed ffs-filter's All button's behavior - Added Reset button to ffs-filter - Minor UI fixes - Added cookies support to persist banner visibility & language selection - Modified some of README.md

--- a/style.css
+++ b/style.css
@@ -847,7 +847,6 @@ button:focus {
   z-index: 99999;
   width: 650px;
   max-width: 80%;
-  overflow-y: scroll;
 }
 
 .ffs-filtermainblock {
